k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-compressor

spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-compressor
  template:
    metadata:
      labels:
        app: image-compressor
    spec:
      containers:
      - name: image-compressor
        image: 572515290220.dkr.ecr.us-west-1.amazonaws.com/web-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
