k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-processor-service

spec:
  selector:
    app: image-processor
  ports:
    - port: 80
      targetPort: 3000
