k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: image-compressor
  annotations:
    kubernetes.io/ingress.class: ingress-nginx

spec:
  rules:
  - host: image-compressor.mancuso.services
    http:
      paths:
      - backend:
          serviceName: image-compressor
          servicePort: 80
